# dotfiles

./: .csirc  .editorconfig  .gdbinit  .gitconfig  .gitignore  .ideavimrc  .ignore  .lldbinit  .xonshrc  .zshrc  Justfile  Pipfile  TODO.adoc  TODO.md  common-config.py  files.toml  flake.nix  laptop-config.py  laptop-config.toml  laptop-config.zsh  lefthook.yml  macbook-alpine-vm.py  macbook-alpine-vm.zsh  macbook-config.py  macbook-config.toml  macbook-config.zsh  mypy.ini  pyproject.toml  raspberrypi4-2022-config.py  run-shell.c  server-config.py  translate_shell_config  translate_shell_config.janet  translate_shell_config.py
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: remote-jj-snapshot.sh
.config/bacon/: prefs.toml
.config/direnv/: .gitignore  direnvrc
.config/evcxr/: init.evcxr
.config/fish/: config.fish
.config/git/: ignore
.config/harper-ls/: dictionary.txt
.config/jj/: config.toml
.config/kitty/: kitty.conf
.config/lsd/: config.yaml
.config/nvim/: init.vim
.config/ptpython/: config.py
.config/pudb/: pudb.cfg
.config/uv/: uv.toml
.elan/: settings.toml
.jbang/: jbang.properties
Mac/: README.md
completion/fish/: .gitignore  ensure_directory_exists.txt
completion/zsh/: _cht.sh
completions/: .gitignore
completions/macbook-2021/: stg.fish
config/: README.md
config/template/: semi-secret.toml
examples/: bootstrap-config.toml
fire-pit/: bootstrap.py
libs/mambaforge/: .condarc  TODO.txt
machines/: README.adoc
machines/shellrc/: __init__.py  archlinux_lenovo_2017.fish  archlinux_lenovo_2017.py  (+13 more)
patches/: poetry-completions-subcommand.fish.patch
scripts/: REQUIRES.md  _stg_hacky_fixup.sh  analyse-ncdu.py  aur-gc  aur-remove  betterstat  cargo-clean-workspace  check_line_length  check_requires.py.disabled  config_to_json.py  detect_machine_name.lua  findrepo  fleet  git-full-status  git-share  git-share.py  gpa.py  grades.py  hash_tarfile_entries  latex-enable-page-numbers  panrender.py  pipx-analyse  randascii  ruff-isort  sudo-persist-login  urlescape  verify_os  wget-website.fish  zig
shell_config/: fish_helpers.fish
shellrc/: common-config.hy  common-config.py  common_config.py  macbook-config-asahi.py  macbook-config.hy  macbook-config.py  macbook_config.py  raspberrypi4-2022-config.py  server-config.py
snippets/: README.md
src/: shared.janet
xonshlibs/: utils.py
(+52 files in other folders)
