[project]
name = "techcable.dotfiles"
authors = [{ name = "Techcable" }]
description = "My dotfiles"
requires-python = ">=3.10"
dynamic = ["version"]

[project.scripts]
translate_shell = "dotfiles.translate_shell.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
src = ["src", "machines", "libs/python"]
select = [
    "F",
    "E",
]
exclude = [
    # ruff doesn't seem to check these right
    "*.pyi"
]

[tool.ruff.per-file-ignores]
"machines/shellrc/*.py" = [
    # Permit `from {name} import *` in machine shellrc files
    "F403",
    # Permit undefined locals. When using star imports, ruff can't
    # figure out defined names -_-
    "F405",
    "F821",
]
